@@ -2,6 +2,8 @@ git-annex (5.20150406.2) UNRELEASED; urgency=medium
 
   * --quiet now suppresses progress displays from eg, rsync.
     (Second time's the charm..)
+  * fromkey, registerurl: When reading from stdin, allow the
+    filename and url, respectively, to contain whitespace.
 
  -- Joey Hess <id@joeyh.name>  Mon, 06 Apr 2015 20:14:20 -0400
 
